[tool.poetry]
name = "everycheese"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
